Allow x-validate-extra-tags on refs
